--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^7.3.1",
+    "express-session": "^1.18.2",
+    "mongoose": "^7.8.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
